Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumObjNumber.quorum
class Main
    action Main
        number num
        num = cast(number, 7.5)
        if num:GetValue() = 7.5
            output "passed"
        end
    end
end