Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumberBooleanField.quorum
class main
    number num
    action Main
        num = cast(number, true)
    end
end